# mcts-with-llm

./: .gitignore  README.md  main.py  mcts_example.py  mlx_example.py  pyproject.toml  visualize_example.py
src/: __init__.py  mcts.py  mcts_node.py  reasoning_generate.py  reasoning_model.py  tree_visualize.py
